Bug 79028 - UI: XY-scatter diagrams reset Major Interval axis date settings
Summary: UI: XY-scatter diagrams reset Major Interval axis date settings
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.4.2 release
Hardware: All All
: medium normal
Assignee: Katarina Behrens
URL:
Whiteboard: target:4.4.0 target:4.3.0.2
Keywords:
: 78261 80458 84632 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-21 17:32 UTC by Albrecht Müller
Modified: 2014-10-29 19:11 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document (63.01 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-05-22 08:57 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Albrecht Müller 2014-05-21 17:32:50 UTC
Steps to reproduce:

Open Calc with a new document.  Format two colums with format "[HH]:MM". This format interprets numbers as hours, where 1 corresponds to "24:00", 2 gives "48:00" and so on. Enter some data. Create a XY diagram that displays these data. Try to format the Y axis of the diagram: Uncheck all automatic scaling options. Set the "main interval" (?) (German: "Hauptintervall") to some value other than "24:00:00" (i.e.  the value given by the automatic setting). Click "OK" to save the settings. The Y axis of the diagram shows the marks as specified. Open the dialog box to format the Y axis again.


Current behavior:

The dialog box shows "24:00:00" as main increment, clicking "OK" changes the settings of the Y axis accordingly.
Formatting the X axis shows the same problem.


Expected behavior:

The main increment should show the same value as before, and clicking "OK" without doing any changes should not change the diagram.

Platform: 
LibreOffice 4.2.4.2 german, Windows 7
Comment 1 Jorendc 2014-05-21 22:41:44 UTC
He! I had to deal exactly with the same behaviour an hour ago! Markings as NEW.
Comment 2 Jorendc 2014-05-22 08:57:11 UTC
Created attachment 99570 [details]
Sample document

Sample document.

* Double click on the chart to select it.
* Format > Axis > X axis (or Y)
* In tab 'Scale' uncheck 'automatic' for the 'Major interval'
* Enter '00:10:00' as value for the Major interval
* OK

Behavior: major interval changes to 00:10:00, which is good. Although, if you go back to the same dialog -> Major interval is changed to 24:00:00
If you now change something else, and don't notice this and hit OK -> major interval will be 24:00:00

Summary: major interval is resetted all the time

Kind regards,
Joren
Comment 3 Commit Notification 2014-06-13 22:01:12 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b8979cae28cc541a1cfca1b4d2f79b92308bcda0

fdo#79028: ungroup widgets and Show() them correctly



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Jorendc 2014-06-14 09:01:42 UTC
Hi Katarina,

Tested using Mac OSX 10.9 with LibreOffice Version: 4.4.0.0.alpha0+
Build ID: b8979cae28cc541a1cfca1b4d2f79b92308bcda0
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-06-13_22:10:11
Looks fixed! Thanks!

Can you please backport the fix to 4.3 and 4.2 branches as well :-)?

Kind regards,
Joren
Comment 5 Katarina Behrens 2014-06-14 09:54:06 UTC
> Can you please backport the fix to 4.3 and 4.2 branches as well :-)?

I most certainly can, but first need to ask someone how to do that (via gerrit, I presume) -- I have never backported anything so far, eheh
Comment 6 Jorendc 2014-06-14 10:13:24 UTC
(In reply to comment #5)
> > Can you please backport the fix to 4.3 and 4.2 branches as well :-)?
> 
> I most certainly can, but first need to ask someone how to do that (via
> gerrit, I presume) -- I have never backported anything so far, eheh

Mmh, it's already been a while I did that for the last time :-).
I think you have to checkout to your local branch where you did your changes. Then do 'git commit -a' and don't change anything to the name or commit ID etc. Then 'git push origin <localBranchName>:refs/for/libreoffice-4-3'. Same for 4-2. But you can always ask other devs at IRC of course ;-).

Thanks for fixing!

Kind regards,
Joren
Comment 7 Commit Notification 2014-06-21 09:21:04 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0ea3f764d70b9223a733d8c2857f42fefd17c536&h=libreoffice-4-3

fdo#79028: ungroup widgets and Show() them correctly


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Jorendc 2014-07-03 21:10:43 UTC
*** Bug 80458 has been marked as a duplicate of this bug. ***
Comment 9 Tomaz Vajngerl 2014-09-24 09:29:48 UTC
*** Bug 78261 has been marked as a duplicate of this bug. ***
Comment 10 A (Andy) 2014-10-29 19:11:59 UTC
*** Bug 84632 has been marked as a duplicate of this bug. ***