fdo#79028: ungroup widgets and Show() them correctly

Showing the whole box (m_pBxMain) shows all children widgets, but
that's not what we want as different widgets must be exposed in
case of date vs. non-date axis.

m_pMt_MainDateStep was then visible at all times, thus bWasDateAxis
was always true and m_pFmtFldStepMain value got unintentionally reset

Change-Id: I4be0b18f181a45fe6bd3cac0594d6a34d875293e